--- a/html/three.html
+++ b/html/three.html
@@ -7,7 +7,7 @@
 <body>
 	<div style="background-color: balck">
 		<h1 style="font-size: 16px" > Ridwan Project </h1>
-		<img src="images/example-image.jpg" />
+		<img src="images/Ridwan-image.png" />
 		<p> This is my personal project, i want to build a website that accpets input from the end user </p>
 	</div>
 <body>
