--- a/html/three.html
+++ b/html/three.html
@@ -5,11 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-	<div style="background-color: balck">
+	<div style="background-color: black">
 		<h1 style="font-size: 16px" > Ridwan Project </h1>
-		<img src="images/Ridwan-image.png" />
+		<img src="images/Ridwan-image.jpg" />
 		<p> This is my personal project, i want to build a website that accpets input from the end user </p>
-	</div>
-<body>
-</html>
 		
