--- a/html/three.html
+++ b/html/three.html
@@ -9,4 +9,6 @@
 		<h1 style="font-size: 16px" > Ridwan Project </h1>
 		<img src="images/Ridwan-image.jpg" />
 		<p> This is my personal project, i want to build a website that accpets input from the end user </p>
+</body>
+</html>
 		
