--- a/html/three.html
+++ b/html/three.html
@@ -4,11 +4,11 @@
 	<title> ridwan's page </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
-<body>
-	<div style="background-color: black">
-		<h1 style="font-size: 16px" > Ridwan Project </h1>
+<body style="background-color: gold">
+	<div>
+		<h1 style="font-size: 16px; color: white" > Ridwan Project </h1>
 		<img src="images/Ridwan-image.jpg" />
-		<p> This is my personal project, i want to build a website that accpets input from the end user </p>
+		<p style="color: white"> This is my personal project, i want to build a website that accpets input from the end user </p>
 </body>
 </html>
 		
