--- a/html/three.html
+++ b/html/three.html
@@ -9,6 +9,7 @@
 		<h1 style="font-size: 16px; color: white" > Ridwan Project </h1>
 		<img src="images/Ridwan-image.jpg" />
 		<p style="color: white"> This is my personal project, i want to build a website that accpets input from the end user </p>
+	</div>
 </body>
 </html>
 		
