--- a/html/four.html
+++ b/html/four.html
@@ -6,7 +6,7 @@
 <body>
 <center>
 	<h1>Ridwan personal project</h1>
-	<img src="images/example.jpg" />
+	<IMG SRC="IMAGES/EXAMPLR.JPG" />
 </center>
 </body>
 </html>
