--- a/html/be.html
+++ b/html/be.html
@@ -6,8 +6,8 @@
 <body>
 	<header>
 	<nav>
-		<h1 style="text-align: center; background-color: green; colour: blue"> ARA Developers</h1>
-		<p>
+		<h1 style="text-align: center; background-color: green; color: blue"> ARA Developers</h1>
+		<p style="float: right">
 		<a href="#" title="This is the home">Home</a>
 		<a href="#" title="We are a fullstack developer">About us</a>
 		<a href="#" title="Contact us atazeezridwan57@gmail.com or +2348084438255">Contact us</a>
@@ -16,6 +16,9 @@
 		</p>
 	</nav>
 	</header>
+	<br />
+	<hr />
+
 </body>
 </html>
 
