--- a/html/be.html
+++ b/html/be.html
@@ -4,9 +4,9 @@
 	<title>ARA Developers webpage</title>
 </head>
 <body>
-	<header>
+	<header style="background-color: green">
 	<nav>
-		<h1 style="text-align: center; background-color: green; color: blue"> ARA Developers</h1>
+		<h1 style="font-size: 20px; text-align: center; color: blue"> ARA Developers</h1>
 		<p style="float: right">
 		<a href="#" title="This is the home">Home</a>
 		<a href="#" title="We are a fullstack developer">About us</a>
@@ -18,7 +18,13 @@
 	</header>
 	<br />
 	<hr />
-
+	<main>
+		<h1>Frontend Development</h1>
+		<p>We create websites and applications using web languages such as HTML, CSS, and JavaScript that allow users to access and interact with the site or app and also make a  user interface (UI) that determines what each part ofsuch site or application does and how it will look.</p>
+		<h1>Backend Development</h1>
+		<p>We build and maintain the mechanisms that process data and perform actions on websites,writes code that forms the backbone of a website or app.</p>
+		<p>We also create and oversee testing schedules to optimize user interface and experience, ensuring optimal display on various browsers and devices.</p>
+		<p>We assess its performance and scalability, of websites and also  adjus code as necessary.</p>
 </body>
 </html>
 
