--- a/html/four.html
+++ b/html/four.html
@@ -6,7 +6,7 @@
 <body>
 <center>
 	<h1>Ridwan personal project</h1>
-	<img src="ayomi.jpg" />
+	<img src="Snapchat-130241384.jpg" />
 </center>
 </body>
 </html>
