--- a/html/be.html
+++ b/html/be.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 	<title>ARA Developers webpage</title>
+	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-	<header style="background-color: green">
+	<header>
 	<nav>
-		<h1 style="font-size: 20px; text-align: center; color: blue"> ARA Developers</h1>
-		<p style="float: right">
+		<h1> ARA Developers</h1>
+		<p>
 		<a href="#" title="This is the home">Home</a>
 		<a href="#" title="We are a fullstack developer">About us</a>
 		<a href="#" title="Contact us atazeezridwan57@gmail.com or +2348084438255">Contact us</a>
