--- a/html/funaab.html
+++ b/html/funaab.html
@@ -4,7 +4,7 @@
 	<title>Funaab portal clone<\title>
 </head>
 <body>
-	<header style="background-color: green>
+	<header style="background-color: green">
 		<h1>STUDENT</br>PORTAL</h1>
 		<p style="text-align: center">KNOWLEDGE FOR DEVELOPMENT</P>
 		<hr style="color: cream; height: 30px; />
